# face-tik

./: .gitignore  1  Dockerfile  INSTRUCTIONS.md  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml
experiment/: face.ipynb
src/face_tik/: config.py
src/face_tik/core/: interfaces.py
src/face_tik/recognizers/: deepface.py  insightface.py
src/face_tik/schemas/: face.py
src/face_tik/utils/: image.py
tests/: test_cli.py  test_recognizers.py
